# bandlimited_sawtooth_synthesis

./: CMakeLists.txt  README.md
sample/: .gitignore  BLITSaw.rc  BLITSaw.sln  BLITSaw.vcxproj  BLITSaw.vcxproj.filters  BLITSawOscillatorVST2.vcxproj  BLITSawOscillatorVST2.vcxproj.filters  BLITSawOscillatorVST3.vcxproj  BLITSawOscillatorVST3.vcxproj.filters  BLITSaw_controller.cpp  BLITSaw_controller.h  BLITSaw_entry.cpp  BLITSaw_entry_vst2.cpp  BLITSaw_guids.h  BLITSaw_oscillator.cpp  BLITSaw_oscillator.h  BLITSaw_processor.cpp  BLITSaw_processor.h  BLITSaw_vst2.def  BLITSaw_vst2_entry.cpp  BLITSaw_vst3.cpp  BLITSaw_vst3.def  BLITSaw_vst3.h  BLITSaw_vst3.rc  BLITSaw_vst3.uidesc  BLITSaw_vst3_controller.cpp  BLITSaw_vst3_controller.h  BLITSaw_vst3_entry.cpp  BLITSaw_vst3_guids.h  bandlimited_sawtooth_oscillator.cpp  bandlimited_sawtooth_oscillator.h  bandlimited_sawtooth_oscillator_note.cpp  bandlimited_sawtooth_oscillator_note.h  bandlimited_sawtooth_oscillator_note_vst3.cpp  bandlimited_sawtooth_oscillator_note_vst3.h  resonance_filter.cpp  resonance_filter.h
source/: BLITSaw_controller.h  BLITSaw_oscillator.cpp  BLITSaw_oscillator.h  BLITSaw_processor.cpp
